--- a/src/app/client/about-us/about-us.component.html
+++ b/src/app/client/about-us/about-us.component.html
@@ -1,5 +1,5 @@
 
-<app-heade></app-heade>
+
 <div class="about-area section-padding2">
     
     <div class="container">
@@ -8,18 +8,17 @@
                 <div class="about-caption mb-50">
                     <!-- Section Tittle -->
                     <div class="section-tittle mb-35">
-                        <span>More About Formevo</span>
-                        <h2>Want to know more</h2>
+                        <span>Plus d'information</span>
+                        <h2>Formevo</h2>
                     </div>
-                    <p>Are you a business manager, training manager, human resources manager, employee of a company or student and you want to be part of your professional training or consulting projects? Our teams are at your disposal to organize your training plan and to answer all your practical questions regarding the management of your professional training and consulting needs:
+                    <p>Fondé en 2018, Formevo est un bureau privé de formation et de consulting agréé par l’état tunisien, et disposant d’une équipe de formateurs expérimentés et de haut niveau qui offre une formation de pointe et répondant aux attentes du marché du travail. Il propose aussi des services variés en termes d’intégration dans la vie professionnelle et d’assistance pour décrocher un job.</p>
 
                      
-                        </p>
                     <ul>
-                        <li><span class="flaticon-business"></span> How to identify your training and consultancy needs?</li>
-                        <li><span class="flaticon-communications-1"></span>How to make training choices or identify consulting needs?</li>
-                        <li><span class="flaticon-graduated"></span>How to evaluate your vocational training and advice actions?</li>
-                        <li><span class="flaticon-tools-and-utensils"></span>How to benefit from reimbursements and subsidies for FormEvo professional training?</li>
+                        <li><span class="flaticon-business"></span> Solutions Entreprises (CRM/ERP/Messagerie)</li>
+                        <li><span class="flaticon-communications-1"></span>Formation initiale</li>
+                        <li><span class="flaticon-graduated"></span>Formation continue (métier, technique, certifiante, langue)</li>
+                        <li><span class="flaticon-tools-and-utensils"></span>Service informatique (Développement web, Design, Réseau)</li>
                     </ul>
                  
                 </div>
