--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,5 +1,6 @@
 
 
+
 <main>
 
     <app-cover></app-cover>
@@ -11,8 +12,8 @@
                 <div class="cl-xl-7 col-lg-8 col-md-10">
                     <!-- Section Tittle -->
                     <div class="section-tittle text-center mb-70">
-                        <span>Popular Online Courses</span>
-                        <h2>Lets Brows All Catagori</h2>
+                        <span></span>
+                        <h2>Catégories</h2>
                     </div> 
                 </div>
             </div>
@@ -23,8 +24,8 @@
                             <span class="flaticon-web-design"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a  href="#">Web Design</a></h5>
-                            <p>Sorem hpsum folor sixdsft amhtget, consectetur adipiscing eliht, sed do eiusmod tempor incidi.</p>
+                            <h5><a  href="#">Design</a></h5>
+                            <p>La Formation de Design Graphique vous permettra de maitriser tous les aspects de la conception de chartes graphiques.</p>
                           
                         </div>
                     </div>
@@ -35,8 +36,8 @@
                             <span class="flaticon-education"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a  href="#">App Development</a></h5>
-                            <p>Sorem hpsum folor sixdsft amhtget, consectetur adipiscing eliht, sed do eiusmod tempor incidi.</p>
+                            <h5><a  href="#">Développement web</a></h5>
+                            <p>Faites vos premiers pas dans le monde du développement web : créez des sites web et donnez vie aux maquettes...</p>
                
                         </div>
                     </div>
@@ -47,8 +48,9 @@
                             <span class="flaticon-communications"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a  href="#">Video Editing</a></h5>
-                            <p>Sorem hpsum folor sixdsft amhtget, consectetur adipiscing eliht, sed do eiusmod tempor incidi.</p>
+                            <h5><a  href="#">Développement mobile</a></h5>
+                            <p>Faites vos premiers pas dans le monde du développement Mobile : maîtriser la programmation IOS, Swift, Android, Xamarin, Arduino.
+                            </p>
                        
                         </div>
                     </div>
@@ -59,8 +61,8 @@
                             <span class="flaticon-computing"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a  href="#">Digital Marketing</a></h5>
-                            <p>Sorem hpsum folor sixdsft amhtget, consectetur adipiscing eliht, sed do eiusmod tempor incidi.</p>
+                            <h5><a  href="#">Création jeu vidéo</a></h5>
+                            <p>Découvrez nos formations ciblée et adaptée aux exigences de l'industrie du jeu vidéo et les professionnels du secteur.</p>
                   
                         </div>
                     </div>
@@ -71,8 +73,8 @@
                             <span class="flaticon-tools-and-utensils"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a  href="#">Seo Marketing</a></h5>
-                            <p>Sorem hpsum folor sixdsft amhtget, consectetur adipiscing eliht, sed do eiusmod tempor incidi.</p>
+                            <h5><a  href="#">Marketing digital</a></h5>
+                            <p>Découvrez nos formations pratiques Référencement Naturel SEO, Community Management, Google Ads SEA.</p>
                      
                         </div>
                     </div>
@@ -83,8 +85,8 @@
                             <span class="flaticon-business"></span>
                         </div>
                         <div class="cat-cap">
-                            <h5><a  href="#">Content Writing</a></h5>
-                            <p>Sorem hpsum folor sixdsft amhtget, consectetur adipiscing eliht, sed do eiusmod tempor incidi.</p>
+                            <h5><a  href="#">Création de contenu</a></h5>
+                            <p>Comprendre la spécificité du digital en matière de création de contenu, Concevoir la stratégie optimale, Elaborer une ligne éditoriale adaptée.</p>
                      
                         </div>
                     </div>
@@ -94,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="browse-btn2 text-center mt-50">
-                        <a routerLink="/etudiant" class="btn">Find More Courses</a>
+              
                     </div>
                 </div>
             </div>
@@ -170,7 +172,7 @@
  
     <app-about-us></app-about-us>
     <!-- About Law End-->
-
+  
 </main>
 
    
