--- a/src/app/client/cover/cover.component.html
+++ b/src/app/client/cover/cover.component.html
@@ -1,17 +1,18 @@
     <!--? slider Area Start-->
+    
     <div class="slider-area ">
         <div class="slider-active">
             <!-- Single Slider -->
             <div class="single-slider slider-height d-flex align-items-center">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-xl-6 col-lg-7 col-md-8">
+                        <div class="col-12">
                             <div class="hero__caption">
-                                <span>Popular Online Courses</span>
-                                <h1>The New Way To Learn Properly in With Us!</h1>
+                                <span data-animation="fadeInLeft"data-delay=".2s">FORMEVO</span>
+                                <h1 data-animation="fadeIn"data-delay=".4s">Votre Partenaire En Formation</h1>
                                 <!-- Hero-btn -->
                                 <div class="hero__btn">
-                                    <a href="industries.html" class="btn hero-btn">Get Started</a>
+                              
                                 </div>
                             </div>
                         </div>
