--- a/src/app/client/our-formatteur/our-formatteur.component.html
+++ b/src/app/client/our-formatteur/our-formatteur.component.html
@@ -4,8 +4,8 @@
             <div class="cl-xl-7 col-lg-8 col-md-10">
                 <!-- Section Tittle -->
                 <div class="section-tittle section-tittle2 text-center mb-70">
-                    <span>More About Our Faculty</span>
-                    <h2>Our Best Teachers</h2>
+              
+                    <h2>Nos meilleurs formateurs</h2>
                 </div> 
             </div>
         </div>
@@ -19,7 +19,7 @@
                     </div>
                     <div class="team-caption">
                         <h3><a>{{f.name }} {{f.lastname}}</a></h3>
-                        <p>Faculty</p>
+                        <p>Formateur</p>
                     </div>
                 </div>
             </div>
