--- a/src/app/client/popular/popular.component.html
+++ b/src/app/client/popular/popular.component.html
@@ -4,8 +4,8 @@
             <div class="cl-xl-7 col-lg-8 col-md-10">
                 <!-- Section Tittle -->
                 <div class="section-tittle text-center mb-70">
-                    <span>Most Popular Course Of This Week</span>
-                    <h2>Our Popular Course</h2>
+                    <span>Les meilleurs formations en 2020</span>
+                    <h2>Nos Formations</h2>
                 </div> 
             </div>
         </div>
@@ -32,11 +32,11 @@
                         </div>
                         <div class="course-cap-bottom d-flex justify-content-between">
                             <ul>
-                                <li><i class="ti-user"></i> 562</li>
+                                <li><i class="ti-user"></i> 561</li>
                                 <li><i class="ti-heart"></i> 562</li>
                             </ul>
-                            <span *ngIf="f.etat == 0">Free</span>
-                            <span *ngIf="f.etat == 1">Premium</span>
+                            <span *ngIf="f.etat == 0">Gratuit</span>
+                            <span *ngIf="f.etat == 1">Payant</span>
 
                         </div>
                     </div>
