--- a/src/app/etudiant/heade/heade.component.html
+++ b/src/app/etudiant/heade/heade.component.html
@@ -35,7 +35,7 @@
 				
 				<img [src]="'http://127.0.0.1/portfolio/assets/'+ user.photo" class="rounded-circle mr-2" height="34" alt="">
 			    <span>{{user.name}}</span>
-				<span class="badge bg-success ml-md-3 mr-md-auto">On ligne</span>
+				<span class="badge bg-success ml-md-3 mr-md-auto">En ligne</span>
 				
 				
 			</div>
@@ -51,9 +51,9 @@
 						<nav>
 							<ul id="navigation">                                                                                          
 								<li><a routerLink="/etudiant">Accueil</a></li>
-								<li><a href="/about-us">About</a></li>
-								<li><a routerLink="/etudiant/monapprentissage">Courses</a></li>
-								<li><a routerLink="/etudiant/Cour">Instructors</a></li>
+								<li><a href="/about-us">Historique</a></li>
+								<li><a routerLink="/etudiant/monapprentissage">Cours</a></li>
+								<li><a routerLink="/etudiant/Cour">Formation</a></li>
 								
 							  
 							</ul>
