--- a/src/app/formatteur/dash/dash.component.html
+++ b/src/app/formatteur/dash/dash.component.html
@@ -1,7 +1,7 @@
 				<!-- Simple statistics -->
 				<div class="m-3">
 					<h6 class="mb-0 font-weight-semibold">
-						Simple stats
+						Statistique
 					</h6>
 				
 				</div>
@@ -28,7 +28,7 @@
 							<div class="media">
 								<div class="media-body">
 									<h3 class="font-weight-semibold mb-0">{{comments.length}}</h3>
-									<span class="text-uppercase font-size-sm text-muted">total comments</span>
+									<span class="text-uppercase font-size-sm text-muted">total commentaires</span>
 								</div>
 
 								<div class="ml-3 align-self-center">
@@ -62,7 +62,7 @@
 
 								<div class="media-body text-right">
 									<h3 class="font-weight-semibold mb-0">{{formation.length}}</h3>
-									<span class="text-uppercase font-size-sm text-muted">total formation</span>
+									<span class="text-uppercase font-size-sm text-muted">total formations</span>
 								</div>
 							</div>
 						</div>
