--- a/src/app/formatteur/navbar/navbar.component.html
+++ b/src/app/formatteur/navbar/navbar.component.html
@@ -26,7 +26,7 @@
 			
 			</ul>
 
-			<span class="badge bg-success ml-md-3 mr-md-auto">Online</span>
+			<span class="badge bg-success ml-md-3 mr-md-auto">En ligne</span>
 
 			<ul class="navbar-nav">
 			
@@ -40,10 +40,10 @@
 					</a>
 
 					<div class="dropdown-menu dropdown-menu-right">
-						<a href="#" class="dropdown-item"><i class="icon-user-plus"></i> My profile</a>
+				
 						<div class="dropdown-divider"></div>
-						<a href="#" class="dropdown-item"><i class="icon-cog5"></i> Account settings</a>
-						<a (click)="_auth.logoutUser()" class="dropdown-item"><i class="icon-switch2"></i> Logout</a>
+			
+						<a (click)="_auth.logoutUser()" class="dropdown-item"><i class="icon-switch2"></i> Déconnexion</a>
 					</div>
 				</li>
 			</ul>
