--- a/src/app/admin/ajoutcategorie/ajoutcategorie.component.html
+++ b/src/app/admin/ajoutcategorie/ajoutcategorie.component.html
@@ -14,14 +14,14 @@
                         <div class="card mb-0">
                             <div class="card-body">
                                 <div class="text-center mb-3">
-                                    <h5 class="mb-0">Create New Categorie</h5>
-                                    <span class="d-block text-muted">All fields are required</span>
+                                    <h5 class="mb-0">Nouvelle Categorie</h5>
+                                    <span class="d-block text-muted">Tous les champs sont obligatoires</span>
                                 </div>
 
 
                                 <div *ngIf="alert" class=" my-3  alert bg-success text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
-									<span class="font-weight-semibold">Well done!</span> ADD with success.
+									<span class="font-weight-semibold">Enregistrement terminé!</span> catégorie ajoutée avec succès.
 							    </div>
 
 
@@ -32,7 +32,7 @@
                                 </div>
  
 
-                                <button (click)="register()" type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Create new categorie</button>
+                                <button (click)="register()" type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Valider</button>
                             </div>
                         </div>
                     </div>
