--- a/src/app/admin/ajoutformation/ajoutformation.component.html
+++ b/src/app/admin/ajoutformation/ajoutformation.component.html
@@ -14,14 +14,14 @@
                         <div class="card mb-0">
                             <div class="card-body">
                                 <div class="text-center mb-3">
-                                    <h5 class="mb-0">Create New Formation</h5>
-                                    <span class="d-block text-muted">All fields are required</span>
+                                    <h5 class="mb-0">Nouvelle formation</h5>
+                                    <span class="d-block text-muted">Tous les champs sont obligatoires</span>
                                 </div>
 
 
                                 <div *ngIf="alert" class=" my-3  alert bg-success text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
-									<span class="font-weight-semibold">Well done!</span> ADD with success.
+									<span class="font-weight-semibold">Enregistrement terminé!</span> Formation ajoutée avec succès.
 							    </div>
 
 
@@ -51,7 +51,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="text" [(ngModel)]="formation.duree" class="form-control" placeholder="duree">
+                                            <input type="text" [(ngModel)]="formation.duree" class="form-control" placeholder="durée">
                                           
                                         </div>
                                     </div>
@@ -60,7 +60,7 @@
                                         <div class="form-group form-group-feedback form-group-feedback-right">
                                                 <select [(ngModel)]="formation.etat" class="form-control">
 
-                                                    <option value="0">free</option>
+                                                    <option value="0">gratuit</option>
                                                     <option value="1">payant</option>
 
 
@@ -95,7 +95,7 @@
 
                             
 
-                                <button (click)="register()" type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Create formation</button>
+                                <button (click)="register()" type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b>Valider</button>
                             </div>
                         </div>
                     </div>
