--- a/src/app/admin/gereretudiant/gereretudiant.component.html
+++ b/src/app/admin/gereretudiant/gereretudiant.component.html
@@ -1,5 +1,16 @@
 
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
 <div class="container">
 
 
@@ -7,7 +18,7 @@
     <div class="row m-5">
 
             <h1 class="lead">
-                Gestion des formatteurs
+                Gestion des étudiants
             </h1>
 
 
@@ -17,10 +28,10 @@
                  	<!-- Extra large table -->
 				<div class="card " style="width: 1000px;">
 					<div class="card-header header-elements-inline">
-						<h5 class="card-title">Extra large table</h5>
+						<h5 class="card-title">Liste des étudiants</h5>
 						<div class="header-elements">
 							<div class="list-icons">
-		                		<a routerLink="/board/addformatteur" class="btn btn-dark text-white" >Add</a>
+		                		
 		                	
 		                	</div>
 	                	</div>
@@ -29,15 +40,15 @@
 				
 
 					<div class="table-responsive">
-						<table class="table table-xl">
+						<table class="table table-striped">
 							<thead>
 								<tr>
 									<th>Photo</th>
-									<th>First Name</th>
-									<th>Last Name</th>
+									<th>Nom</th>
+									<th>Prénom</th>
                                     <th>Email</th>
-                                    <th>Adress</th>
-									<th>Phone</th>
+                                    <th>Adresse</th>
+									<th>Téléphone</th>
 									<th>Action</th>
                                     
                                     
@@ -51,10 +62,10 @@
                                     <td>{{f.email}}</td>
 									<td>{{f.adress}}</td>
 									<td>{{f.phone}}</td>
-                                    <td> <button (click)="delete(f.id)" class="btn btn-danger">Delete</button>
+                                    <td> <button (click)="delete(f.id)" class="btn btn-danger">supprimer</button>
                                     
-                                        <button (click)="enable(f.id, 1)" *ngIf="f.enable == 1" class="btn btn-outline-success mx-2">Disable</button>
-                                        <button (click)="enable(f.id, 0)" *ngIf="f.enable == 0" class="btn btn-outline-info mx-2">Enable</button>
+                                        <button (click)="enable(f.id, 1)" *ngIf="f.enable == 1" class="btn btn-outline-success mx-2">Activer</button>
+                                        <button (click)="enable(f.id, 0)" *ngIf="f.enable == 0" class="btn btn-outline-info mx-2">Désactiver</button>
 
                                     
                                     </td>
@@ -77,3 +88,5 @@
 
 
 </div>
+</body>
+</html>
