--- a/src/app/admin/gestioncategorie/gestioncategorie.component.html
+++ b/src/app/admin/gestioncategorie/gestioncategorie.component.html
@@ -1,4 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
 
 <div class="container">
 
@@ -17,10 +28,10 @@
                  	<!-- Extra large table -->
 				<div class="card " style="width: 1000px;">
 					<div class="card-header header-elements-inline">
-						<h5 class="card-title">Extra large table</h5>
+						<h5 class="card-title">Liste des catégories</h5>
 						<div class="header-elements">
 							<div class="list-icons">
-		                		<a routerLink="/board/addcategorie" class="btn btn-dark text-white" >Add</a>
+		                		<a routerLink="/board/addcategorie" class="btn btn-success text-white" >Ajouter</a>
 		                	
 		                	</div>
 	                	</div>
@@ -29,7 +40,7 @@
 				
 
 					<div class="table-responsive">
-						<table class="table table-xl">
+						<table class="table table-striped">
 							<thead>
 								<tr>
 									<th>#</th>
@@ -46,12 +57,12 @@
                                     <td>{{f.titre}}</td>
 									
                                     
-                                    <td> <button (click)="delete(f.id)" class="btn btn-danger">Delete</button>
-                                        <button (click)="up(f.titre,i)" class="btn btn-info">Update</button>
+                                    <td> <button (click)="delete(f.id)" class="btn btn-danger">Supprimer</button>
+                                        <button (click)="up(f.titre,i)" class="btn btn-info">Modifier</button>
                                     
                                     </td>
 
-                                    <td *ngIf="id == i">   <input [(ngModel)]="cat.titre"> <button class="btn btn-dark" (click)="update(f.id)">update</button>   </td>
+                                    <td *ngIf="id == i">   <input [(ngModel)]="cat.titre"> <button class="btn btn-primary" (click)="update(f.id)">Valider</button>   </td>
 								</tr>
 								
 							</tbody>
@@ -71,3 +82,5 @@
 
 
 </div>
+</body>
+</html>
