--- a/src/app/etudiant/list-formations/list-formations.component.html
+++ b/src/app/etudiant/list-formations/list-formations.component.html
@@ -10,7 +10,7 @@
         <!-- Inner container -->
         <div class="d-flex align-items-start flex-column flex-md-row">
             <!-- Left content -->
-            <div class=" order-2 order-md-1" style="width: 900px;">
+            <div class=" order-2 order-md-1">
 
                 <!-- Vertical cards -->
                 <div class="row">
