--- a/src/app/etudiant/monapprentissage/monapprentissage.component.html
+++ b/src/app/etudiant/monapprentissage/monapprentissage.component.html
@@ -11,7 +11,7 @@
             
         
             <!-- Left content -->
-            <div class=" order-2 order-md-1" style="width: 900px;">
+            <div class=" order-2 order-md-1">
 
                 <!-- Vertical cards -->
                 <div class="row">
@@ -60,10 +60,11 @@
 
            
 
-
+                <app-footer></app-footer>
 
             </div>
             <!-- /left content -->
 
 
-            <app-footer></app-footer>
+            
+            
