--- a/src/app/formatteur/ajoutcours/ajoutcours.component.html
+++ b/src/app/formatteur/ajoutcours/ajoutcours.component.html
@@ -14,20 +14,20 @@
                         <div class="card mb-0">
                             <div class="card-body">
                                 <div class="text-center mb-3">
-                                    <h5 class="mb-0">Create New cours</h5>
-                                    <span class="d-block text-muted">All fields are required</span>
+                                    <h5 class="mb-0">Nouveau cours</h5>
+                                    <span class="d-block text-muted">Tous les champs sont obligatoires</span>
                                 </div>
 
 
                                 <div *ngIf="alert" class=" my-3  alert bg-success text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
-									<span class="font-weight-semibold">Well done!</span> ADD with success.
+									<span class="font-weight-semibold">Enregistrement terminé!</span> Nouveau cours ajoutée.
 							    </div>
 
 
 
                                 <div class="form-group form-group-feedback form-group-feedback-right">
-                                    <input type="text" class="form-control" [(ngModel)]="user.titre" placeholder="titre">
+                                    <input type="text" class="form-control" [(ngModel)]="user.titre" placeholder="Titre">
                                   
                                 </div>
 
@@ -51,7 +51,7 @@
 
                             
 
-                                <button (click)="register()" type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Create account</button>
+                                <button (click)="register()" type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Valider</button>
                             </div>
                         </div>
                     </div>
