--- a/src/app/formatteur/sidbar/sidbar.component.html
+++ b/src/app/formatteur/sidbar/sidbar.component.html
@@ -34,7 +34,7 @@
                         </div>
 
                         <div class="ml-3 align-self-center">
-                            <a href="#" class="text-white"><i class="icon-cog3"></i></a>
+                        
                         </div>
                     </div>
                 </div>
@@ -56,14 +56,14 @@
                         <a routerLink="/formatteur"  class="nav-link ">
                             <i class="icon-home4"></i>
                             <span>
-                                Dashboard
+                                Accueil
                             </span>
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a  routerLink="/formatteur/gestioncours" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-book"></i>
                             <span>
                                 Gestion des cours
                             </span>
@@ -73,7 +73,7 @@
 
                     <li class="nav-item">
                         <a  routerLink="/formatteur/gestionquiz" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-check"></i>
                             <span>
                                 Gestion des Quiz
                             </span>
@@ -83,9 +83,9 @@
 
                     <li class="nav-item">
                         <a  routerLink="/formatteur/gestiontest" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-laptop"></i>
                             <span>
-                                Gestion des Test
+                                Gestion des Tests
                             </span>
                         </a>
                     </li>
@@ -94,9 +94,9 @@
 
                     <li class="nav-item">
                         <a  routerLink="/formatteur/posts" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-rocket"></i>
                             <span>
-                                Gestion des Test et quiz passer par etudiant
+                                Gestion d'évaluation
                             </span>
                         </a>
                     </li>
@@ -104,9 +104,9 @@
                     
                     <li class="nav-item">
                         <a  routerLink="/formatteur/mesformation" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-cloud"></i>
                             <span>
-                                apprentissage
+                                Apprentissage
                             </span>
                         </a>
                     </li>
