--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
 		<div class="content-wrapper">
 			<div *ngIf="alert1" class=" my-3  alert bg-danger text-white alert-styled-left alert-dismissible">
 				<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
-				<span class="font-weight-semibold">Erreur!</span> login ou password incorrect <a href="#" class="alert-link"></a>
+				<span class="font-weight-semibold">Erreur!</span> login ou Mot de passe incorrecte <a href="#" class="alert-link"></a>
 			</div>
 
 			<!-- Content area -->
@@ -18,8 +18,8 @@
 						<div class="card-body">
 							<div class="text-center mb-3">
 								<i class="icon-reading icon-2x text-slate-300 border-slate-300 border-3 rounded-round p-3 mb-3 mt-1"></i>
-								<h5 class="mb-0">Login to your account</h5>
-								<span class="d-block text-muted">Enter your credentials below</span>
+								<h5 class="mb-0">Connexion</h5>
+								<span class="d-block text-muted">Tous les champs sont obligatoires</span>
 							</div>
 
 							<div class="form-group form-group-feedback form-group-feedback-left">
@@ -30,17 +30,17 @@
 							</div>
 
 							<div class="form-group form-group-feedback form-group-feedback-left">
-								<input type="password" class="form-control" placeholder="Password" [(ngModel)]="loginUserData.password">
+								<input type="password" class="form-control" placeholder="Mot de passe" [(ngModel)]="loginUserData.password">
 								<div class="form-control-feedback">
 									<i class="icon-lock2 text-muted"></i>
 								</div>
 							</div>
 
 							<div class="form-group">
-								<button (click)="loginUser()" type="submit" class="btn bg-primary btn-block">Sign in <i class="icon-circle-right2 ml-2"></i></button>
+								<button (click)="loginUser()" type="submit" class="btn bg-primary btn-block">Se connecter<i class="icon-circle-right2 ml-2"></i></button>
 							</div>
 							<div class="form-group">
-								<button type="submit" class="btn bg-success btn-block" routerLink="/register">Create account <i class="icon-circle-right2 ml-2"></i></button>
+								<button type="submit" class="btn bg-success btn-block" routerLink="/register">S'inscrire <i class="icon-circle-right2 ml-2"></i></button>
 							</div>
 						
 						</div>
