--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -15,37 +15,37 @@
                             <div class="card-body">
                                 <div class="text-center mb-3">
                                     <i class="icon-plus3 icon-2x text-success border-success border-3 rounded-round p-3 mb-3 mt-1"></i>
-                                    <h5 class="mb-0">Create account</h5>
-                                    <span class="d-block text-muted">All fields are required</span>
+                                    <h5 class="mb-0">Inscription</h5>
+                                    <span class="d-block text-muted">Tous les champs sont obligatoires</span>
                                 </div>
 
 
                                 <div *ngIf="alert" class=" my-3  alert bg-success text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
-									<span class="font-weight-semibold">Well done!</span> Wait admin to approve your account <a href="#" class="alert-link">this important</a> alert message.
+									<span class="font-weight-semibold">Enregistrement Terminé!</span> Attendez l'activation du votre compte. <a href="#" class="alert-link">this important</a> alert message.
 							    </div>
                                 <div *ngIf="alert1" class=" my-3  alert bg-danger text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
-									<span class="font-weight-semibold">Erreur!</span> Mail exist <a href="#" class="alert-link"></a>
+									<span class="font-weight-semibold">Erreur!</span> Email existe <a href="#" class="alert-link"></a>
 							    </div>
 
 
                                 <div class="form-group form-group-feedback form-group-feedback-right">
-                                    <input type="text" class="form-control" [(ngModel)]="user.name" placeholder="Choose name">
+                                    <input type="text" class="form-control" [(ngModel)]="user.name" placeholder="Nom">
                                   
                                 </div>
 
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="text" class="form-control" [(ngModel)]="user.lastname" placeholder="last name">
+                                            <input type="text" class="form-control" [(ngModel)]="user.lastname" placeholder="Prénom">
                                            
                                         </div>
                                     </div>
 
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="text" class="form-control" [(ngModel)]="user.email" placeholder="email">
+                                            <input type="text" class="form-control" [(ngModel)]="user.email" placeholder="Email">
                                             
                                         </div>
                                     </div>
@@ -55,14 +55,14 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="text" [(ngModel)]="user.adress" class="form-control" placeholder="adress">
+                                            <input type="text" [(ngModel)]="user.adress" class="form-control" placeholder="Adresse">
                                           
                                         </div>
                                     </div>
 
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="text" class="form-control" [(ngModel)]="user.phone" placeholder="phone">
+                                            <input type="text" class="form-control" [(ngModel)]="user.phone" placeholder="Téléphone">
                                            
                                         </div>
                                     </div>
@@ -74,14 +74,14 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="text" [(ngModel)]="user.login" class="form-control" placeholder="Create login">
+                                            <input type="text" [(ngModel)]="user.login" class="form-control" placeholder="login">
                                           
                                         </div>
                                     </div>
 
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="password" class="form-control" [(ngModel)]="user.password" placeholder="create password">
+                                            <input type="password" class="form-control" [(ngModel)]="user.password" placeholder="Mot de passe">
                                            
                                         </div>
                                     </div>
@@ -94,10 +94,10 @@
 
                             
 
-                                <button (click)="register()" type="submit" class="btn bg-success btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Create account</button>
+                                <button (click)="register()" type="submit" class="btn bg-success btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Valider</button>
                              
                                 <br>   
-                                <button type="submit" class="btn bg-success btn-labeled btn-labeled-right mt-2" routerLink="">Login </button>
+                                <button type="submit" class="btn bg-success btn-labeled btn-labeled-right mt-2" routerLink="">Se connecter </button>
                               
                             </div>
                         </div>
